@@ -7,4 +7,6 @@ def test_suite():
     return unittest.TestSuite((
         doctestunit.DocFileSuite('feedconsuming.txt',
                                  package='Products.feedfeeder.doc'),
+        doctestunit.DocFileSuite('extendeddatetime.txt',
+                                 package='Products.feedfeeder.doc'),
         ))
