@@ -12,6 +12,7 @@ find-links =
     http://effbot.org/downloads
 
 eggs =
+    PILwoTK
     elementtree
     Products.feedfeeder
 
